# Projects

./: README.md
Chess/: AttackMasks.cpp  AttackMasks.h  Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  CMakeLists.txt  Definitions.h  Evaluation.cpp  Evaluation.h  Move.cpp  Move.h  MoveList.h  main.cpp
Noughts and Crosses/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
